--- a/app/src/main/res/layout/item_best_students.xml
+++ b/app/src/main/res/layout/item_best_students.xml
@@ -7,6 +7,7 @@
 
     <com.meetsl.scardview.SCardView
         android:id="@+id/i"
+        android:background="@color/backgroundMainColor"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:cardCornerRadius="12dp"
@@ -40,7 +41,7 @@
                 android:fontFamily="@font/montserrat_bold"
                 android:maxLines="1"
                 android:text="Kevin Seith"
-                android:textColor="@color/blackP"
+                android:textColor="@color/textMainColor"
                 android:textSize="20sp"
                 app:layout_constraintStart_toEndOf="@+id/iv_top_student"
                 app:layout_constraintTop_toTopOf="@+id/iv_top_student" />
