--- a/app/src/main/res/layout/onboarding_slide2.xml
+++ b/app/src/main/res/layout/onboarding_slide2.xml
@@ -23,7 +23,7 @@
         android:letterSpacing="0.002"
         android:lineHeight="32dp"
         android:text="@string/onboarding_slide2_title"
-        android:textColor="@color/blackP"
+        android:textColor="@color/textMainColor"
         android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/img" />
@@ -36,7 +36,7 @@
         android:fontFamily="@font/montserrat_medium"
         android:letterSpacing="0.02"
         android:text="@string/onboarding_slide2_desc"
-        android:textColor="@color/blackP"
+        android:textColor="@color/textMainColor"
         android:textSize="14sp"
         app:layout_constraintStart_toStartOf="@+id/titleTv"
         app:layout_constraintTop_toBottomOf="@+id/titleTv" />
