--- a/app/src/main/res/layout/activity_about_app.xml
+++ b/app/src/main/res/layout/activity_about_app.xml
@@ -11,11 +11,11 @@
         android:id="@+id/titl_aboutapp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginStart="@dimen/_16dp"
+        android:layout_marginTop="@dimen/_24dp"
+        android:layout_marginEnd="@dimen/_16dp"
         android:justificationMode="inter_word"
         android:letterSpacing="0.03"
-        android:lineHeight="20dp"
+        android:lineHeight="@dimen/_20dp"
         android:text="@string/titl_about_app"/>
 </ScrollView>
