--- a/app/src/main/res/layout/activity_detail_task.xml
+++ b/app/src/main/res/layout/activity_detail_task.xml
@@ -6,18 +6,33 @@
     android:layout_height="match_parent"
     tools:context=".home.task.DetailTaskActivity">
 
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar_detail_web"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/cardMainColor"
+        android:elevation="@dimen/_16dp"
+        app:carbon_elevation="@dimen/_24dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:navigationIcon="@drawable/ic_back"
+        app:title="Assignment"
+        app:titleTextAppearance="@style/ToolbarAppearance"
+        app:titleTextColor="@color/blackP" />
+
     <TextView
         android:id="@+id/titl_listtask1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="20dp"
-        android:text="ASSIGMENT TASK :"
         android:fontFamily="@font/montserrat_semi_bold"
+        android:text="ASSIGMENT TASK :"
         android:textColor="@color/blackP"
         android:textSize="18sp"
+        android:layout_marginTop="@dimen/_16dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/toolbar_detail_web" />
 
     <TextView
         android:id="@+id/tv_title_detailtask"
