--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragment.HomeFragment">
+    tools:context=".ui.fragment.HomeFragment">
 
     <ImageView
         android:id="@+id/btn_point"
@@ -23,7 +23,7 @@
         android:layout_marginStart="12dp"
         android:fontFamily="@font/montserrat_bold"
         android:text="400"
-        android:textColor="@color/blackP"
+        android:textColor="@color/textMainColor"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="@+id/btn_point"
         app:layout_constraintStart_toEndOf="@+id/btn_point"
@@ -45,9 +45,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:fontFamily="@font/montserrat_bold"
-        android:letterSpacing="0.02"
+        android:letterSpacing="0.01"
         android:text="@string/titl_category"
-        android:textColor="@color/blackP"
+        android:textColor="@color/textMainColor"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="@+id/btn_point"
         app:layout_constraintTop_toBottomOf="@+id/btn_point" />
@@ -279,18 +279,18 @@
         android:layout_marginTop="32dp"
         android:fontFamily="@font/montserrat_bold"
         android:text="@string/titl_newesttask"
-        android:textColor="@color/blackP"
+        android:textColor="@color/textMainColor"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/scrollview" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_newest_task"
-        android:layout_width="409dp"
-        android:layout_height="406dp"
+        android:id="@+id/rv_task"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginTop="16dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginEnd="@dimen/_16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/titl_newesttask" />
