--- a/app/src/main/res/layout/item_list_module.xml
+++ b/app/src/main/res/layout/item_list_module.xml
@@ -5,18 +5,20 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <com.meetsl.scardview.SCardView
+    <com.google.android.material.card.MaterialCardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#FDFEFF"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="12dp"
+        android:layout_marginBottom="16dp"
+        android:elevation="@dimen/_16dp"
         app:cardCornerRadius="12dp"
         app:cardCornerVisibility="none"
-        app:cardElevation="8dp"
-        app:cardLightDirection="none"
-        app:cardPreventCornerOverlap="true"
-        app:cardShadowEndColor="#50FFFFFF"
-        app:cardShadowStartColor="#50EAECEF"
+        app:cardElevation="10dp"
+        app:cardMaxElevation="@dimen/_16dp"
         app:cardUseCornerArea="true"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -27,15 +29,15 @@
             android:orientation="vertical">
 
             <carbon.widget.ImageView
-                android:id="@+id/iv_weblist"
+                android:id="@+id/iv_module"
                 android:layout_width="match_parent"
                 android:layout_height="155dp"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="16dp"
                 android:background="@drawable/img_weblist"
-                app:carbon_cornerRadius="8dp"
-                android:scaleType="fitXY"/>
+                android:scaleType="fitXY"
+                app:carbon_cornerRadius="8dp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -46,27 +48,27 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/label_web"
+                    android:id="@+id/tv_label_module"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:fontFamily="@font/montserrat_medium"
                     android:text="ANDROID - FIRYAL"
-                    android:textColor="@color/blackP"
-                    android:textSize="12sp" />
+                    android:textColor="@color/textMainColor"
+                    android:textSize="@dimen/_14sp" />
 
                 <TextView
-                    android:id="@+id/date_web"
+                    android:id="@+id/tv_date_module"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/montserrat_regular"
                     android:text="26 Aug"
-                    android:textColor="@color/unselected_icon"
+                    android:textColor="@color/grayTextColor"
                     android:textSize="12sp" />
             </LinearLayout>
 
             <TextView
-                android:id="@+id/tv_tittle_web"
+                android:id="@+id/tv_tittle_module"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
@@ -74,7 +76,7 @@
                 android:layout_marginEnd="16dp"
                 android:fontFamily="@font/montserrat_bold"
                 android:text="Retrofit with Kotlin"
-                android:textColor="@color/blackP"
+                android:textColor="@color/textMainColor"
                 android:textSize="18sp" />
 
             <ImageView
@@ -83,10 +85,10 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="16dp"
-                android:background="#EDEDED" />
+                android:background="@color/lineMainColor" />
 
             <TextView
-                android:id="@+id/tv_desc_web"
+                android:id="@+id/tv_desc_module"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
@@ -97,11 +99,11 @@
                 android:letterSpacing="0.02"
                 android:maxLines="2"
                 android:text="This module explains how to use a retrofit library that serves to process data."
-                android:textColor="#979797"
+                android:textColor="@color/grayTextColor"
                 android:textSize="10sp" />
 
         </LinearLayout>
 
-    </com.meetsl.scardview.SCardView>
+    </com.google.android.material.card.MaterialCardView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
