--- a/app/src/main/res/navigation/bottom_nav.xml
+++ b/app/src/main/res/navigation/bottom_nav.xml
@@ -6,17 +6,17 @@
 
     <fragment
         android:id="@+id/homeFragment"
-        android:name="com.aisyah.learnapp.fragment.HomeFragment"
+        android:name="com.aisyah.learnapp.ui.fragment.HomeFragment"
         android:label="fragment_home"
         tools:layout="@layout/fragment_home" />
     <fragment
         android:id="@+id/studentFragment"
-        android:name="com.aisyah.learnapp.fragment.RankFragment"
+        android:name="com.aisyah.learnapp.ui.fragment.RankFragment"
         android:label="fragment_students"
         tools:layout="@layout/fragment_rank" />
     <fragment
         android:id="@+id/accountFragment"
-        android:name="com.aisyah.learnapp.fragment.AccountFragment"
+        android:name="com.aisyah.learnapp.ui.fragment.AccountFragment"
         android:label="fragment_account"
         tools:layout="@layout/fragment_account" />
 
