--- a/app/src/main/res/layout/activity_detail_modules.xml
+++ b/app/src/main/res/layout/activity_detail_modules.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#F6F8FB"
     android:orientation="vertical"
     tools:context=".home.DetailModulesActivity">
 
@@ -37,7 +36,7 @@
                 android:layout_marginStart="@dimen/_16dp"
                 android:layout_marginEnd="@dimen/_16dp"
                 android:background="@drawable/imgw2"
-                android:scaleType="fitXY"
+                android:scaleType="centerCrop"
                 app:carbon_cornerRadius="@dimen/_15dp"
                 app:carbon_elevation="@dimen/_16dp"
                 app:layout_constraintEnd_toEndOf="parent"
