--- a/app/src/main/res/layout/activity_detail_student.xml
+++ b/app/src/main/res/layout/activity_detail_student.xml
@@ -13,7 +13,7 @@
         android:layout_gravity="center"
         android:layout_marginTop="12dp">
 
-        <ImageView
+        <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/iv_detail_student"
             android:layout_width="160dp"
             android:layout_height="160dp"
@@ -29,7 +29,7 @@
             android:layout_marginTop="20dp">
 
             <TextView
-                android:id="@+id/tv_username"
+                android:id="@+id/tv_detail_username"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Username"
@@ -63,6 +63,7 @@
                 android:background="@android:color/transparent"/>
 
             <TextView
+                android:id="@+id/tv_detail_like"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="165"
@@ -76,7 +77,7 @@
         </LinearLayout>
 
         <TextView
-            android:id="@+id/tv_profiledesc"
+            android:id="@+id/tv_detail_desc_student"
             android:layout_width="match_parent"
             android:layout_height="65dp"
             android:textSize="13sp"
