--- a/app/src/main/res/layout/item_list_task.xml
+++ b/app/src/main/res/layout/item_list_task.xml
@@ -2,21 +2,21 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <com.meetsl.scardview.SCardView
+    <com.google.android.material.card.MaterialCardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/_20dp"
         android:background="@color/backgroundMainColor"
         app:cardCornerRadius="12dp"
+        android:layout_marginStart="@dimen/_16dp"
+        android:layout_marginEnd="@dimen/_16dp"
+        android:layout_marginTop="@dimen/carbon_grid8"
         app:cardCornerVisibility="none"
         app:cardElevation="8dp"
-        app:cardLightDirection="none"
-        app:cardPreventCornerOverlap="true"
-        app:cardShadowEndColor="@color/backgroundMainColor"
-        app:cardShadowStartColor="@color/backgroundMainColor"
-        app:cardUseCornerArea="true"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -75,7 +75,7 @@
                 android:maxLines="1"
                 android:text="Retrofit with Kotlin"
                 android:textColor="@color/textMainColor"
-                android:textSize="18sp"
+                android:textSize="16sp"
                 app:layout_constraintStart_toStartOf="@+id/tv_category_task"
                 app:layout_constraintTop_toBottomOf="@+id/tv_category_task" />
 
@@ -104,6 +104,6 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-    </com.meetsl.scardview.SCardView>
+    </com.google.android.material.card.MaterialCardView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
